<resources>
    <string name="app_name">College Buddy</string>

    <!-- Action Bar Menu -->
    <string name="action_bar_menu_profile">Profile</string>
    <string name="action_bar_menu_settings">Settings</string>
    <string name="action_bar_delete">Delete</string>

    <!-- Bottom Nav Menu -->
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_notes">Notes</string>
    <string name="bottom_menu_attendance">Attendance</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Alert Dialog -->
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <!-- Login Activity -->
    <string name="login_fragment_tagline">The best college assistant</string>
    <string name="login_edit_text_enrollment_hint">Enrollment Number</string>
    <string name="login_edit_text_email_hint">Email</string>
    <string name="login_edit_text_name_hint">Name</string>
    <string name="login_edit_text_password_hint">Password</string>
    <string name="login_fragment_forgot_password">Forgot Password?</string>
    <string name="login_activity_log_in">Log in</string>
    <string name="login_fragment_create_account">Don\'t have an account?</string>
    <string name="login_activity_sign_up">SIGN UP</string>
    <string name="register_fragment_confirmation">Already have an account?</string>
    <string name="login_fragment_sign_up">Sign up</string>

    <!-- Content Descriptions -->
    <string name="bottom_sheet_access_button">Bottom Sheet Access Button</string>
    <string name="id_card_image">Id Card Image</string>
    <string name="add_subject_button">Add Subject Button</string>
    <string name="back_button">Back Button</string>
    <string name="pdf_icon">pdf icon</string>
    <string name="upload_pdf_button">Upload Pdf Button</string>

    <!-- Fragment Notes -->
    <string name="fragment_notes_text_view_heading">Your Subjects</string>
    <string name="fragment_notes_add_subject_hint">There are no subjects currently. Add subjects using plus button</string>

    <!-- Fragment Attendance -->
    <string name="fragment_attendance_title">Attendance</string>
    <string name="fragment_attendance_text_view_total_classes">Today\'s Classes</string>
    <string name="fragment_attendance_text_view_classes_attended">Classes Attended</string>
    <string name="fragment_attendance_submit_button">SUBMIT</string>
    <string name="fragment_attendance_summary_title">Summary</string>
    <string name="fragment_attendance_summary_pie_chart_absent">Absent</string>
    <string name="fragment_attendance_summary_pie_chart_present">Present</string>
    <string name="fragment_attendance_summary_percentage_title">Attendance Percentage:</string>

    <!-- Fragment Subject Notes -->
    <string name="fragment_subject_notes_add_pdf_hint">There are no Pdf\'s currently. Add pdf using upload button</string>
    <string name="fragment_home_time_table_title">Time Table</string>
    <string name="bottom_sheet_upload_card_button_hint">Upload Id Card</string>
</resources>