<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.collegebuddy.ui.HomeFragment"
        android:label="@string/bottom_menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.example.collegebuddy.ui.NotesFragment"
        android:label="@string/bottom_menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.example.collegebuddy.ui.AttendanceFragment"
        android:label="@string/bottom_menu_attendance"
        tools:layout="@layout/fragment_attendance" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.collegebuddy.ui.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.collegebuddy.ui.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />
</navigation>