<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegisterFragment">

    <ImageView
        android:id="@+id/register_back_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/register_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/login_activity_sign_up"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/enrollment_et"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/register_heading"
            android:autofillHints="phone"
            android:background="@drawable/bg_txt_username"
            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/login_edit_text_enrollment_hint"
            android:inputType="number"
            android:paddingStart="60dp"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/enrollment_et"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_txt_username"
            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/login_edit_text_name_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="60dp"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/name_et"
            android:autofillHints="password"
            android:background="@drawable/bg_txt_username"
            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/login_edit_text_email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="60dp"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@id/email_et"
            android:autofillHints="password"
            android:background="@drawable/bg_txt_password"
            android:fontFamily="@font/montserrat_semibold"
            android:hint="@string/login_edit_text_password_hint"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_et"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="24dp"
            android:text="@string/login_activity_sign_up" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/confirmation_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/register_fragment_confirmation"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/back_to_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/login_activity_log_in"
            android:textColor="@color/purple_500" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>